Migrate Dockerization for Application